# Hackathone-2-Phase-3

./: .gitignore  AGENTS.md  README.md  package-lock.json  test.db
.claude/: settings.local.json
.specify/memory/: constitution.md
backend/: 0.3.0  README.md  db.py  debug_auth.py  debug_test.py  final_test.py  generate_secret.py  integration_test.py  local_server.py  local_test.db  main.py  models.py  pyproject.toml  quick_test.py  requirements.txt  run_local.py  setup.py  signin_test.py  test.db  test_api.py  test_basic.py  test_bcrypt_fix.py  test_hash_format.py  test_local.db  test_passwords.py  test_server.py  test_signup.py
backend/mcp/: server.py
backend/middleware/: jwt.py
backend/routes/: auth.py  chat.py  tasks.py
backend/services/: auth.py  chat.py  chat_service.py  gemini_service.py  tasks.py
frontend/: next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vercel.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/(protected)/: layout.tsx
frontend/app/chat/: page.tsx
frontend/app/signin/: page.tsx
frontend/app/signup/: page.tsx
frontend/components/: ApiExample.tsx  ErrorBoundary.tsx  auth-provider.tsx  delete-dialog.tsx  filter-tabs.tsx  protected-route.tsx  signin-form.tsx  signup-form.tsx  task-card.tsx  task-header.tsx  task-list.tsx  task-modal.tsx
frontend/hooks/: useApi.ts
frontend/lib/: api.ts  auth-api.ts  auth.ts  chat-api.ts  tasks-api.ts  types.ts
frontend/utils/: verify-endpoints.ts
specs/todo-ai-chatbot/: plan.md  spec.md  tasks.md
(+28 files in other folders)
